package com.jensui.projects.fade;

public interface ICopyCommand {

    void copy(IFile source, IFile target) throws Exception;

}
