package com.jensui.projects.fade;

public interface IDeleteCommand {

    void delete(IFile file) throws Exception;

}
