package com.jensui.projects.fade;

public interface IRenameCommand {

    void rename(IFile file, String newName) throws Exception;

}
