@startuml

title __FADE's Class Diagram__\n

  package com.jensui.projects.fade {
    class ConnectorManager {
        {static} ~ instance : ConnectorManager
        ~ connectors : List<IConnector>
        - ConnectorManager()
        {static} + getInstance()
        + addConnector()
        + getConnectors()
    }
  }
  

  package com.jensui.projects.fade {
    class FaDE {
        {static} - serialVersionUID : long
        - jsp : JSplitPane
        {static} - instance : FaDE
        {static} + getInstance()
        - FaDE()
        + getSelectedFaDEComponent()
        + getUnselectedFaDEComponent()
        {static} + main()
        + selected()
        {static} + getOSType()
    }
  }
  

  package com.jensui.projects.fade {
    enum OSType {
      MS
      UNIX
      UNKNOWN
    }
  }
  

  package com.jensui.projects.fade {
    class FaDELogger {
        {static} - instance : FaDELogger
        {static} + getInstance()
        - FaDELogger()
        + write()
    }
  }
  

  package com.jensui.projects.fade {
    class FaDEUncaughtExceptionHandler {
        - logger : Logger
        + FaDEUncaughtExceptionHandler()
        + uncaughtException()
        - logException()
    }
  }
  

  package com.jensui.projects.fade {
    interface IConnector {
        {abstract} + getFile()
        {abstract} + getFile()
        {abstract} + convert()
        {abstract} + getRootFiles()
        {abstract} + getRenameCommand()
        {abstract} + getCopyCommand()
        {abstract} + getDeleteCommand()
    }
  }
  

  package com.jensui.projects.fade {
    interface ICopyCommand {
        {abstract} + copy()
    }
  }
  

  package com.jensui.projects.fade {
    interface IDeleteCommand {
        {abstract} + delete()
    }
  }
  

  package com.jensui.projects.fade {
    interface IFile {
        {abstract} + getChildCount()
        {abstract} + getChildren()
        {abstract} + getName()
        {abstract} + getURI()
        {abstract} + isDir()
        {abstract} + getDescription()
        {abstract} + getSize()
        {abstract} + getTotalSpace()
        {abstract} + getFreeSpace()
        {abstract} + getLastChanged()
        {abstract} + exists()
        {abstract} + getFile()
        {abstract} + getParent()
        {abstract} + getConnector()
        {abstract} + setConnector()
        {abstract} + mkDir()
        {abstract} + createNewFile()
        {abstract} + setWritable()
    }
  }
  

  package com.jensui.projects.fade {
    interface IRenameCommand {
        {abstract} + rename()
    }
  }
  

  package com.jensui.projects.fade {
    class ResourceHandler {
        {static} - instance : ResourceHandler
        - strings : ResourceBundle
        - icons : ResourceBundle
        - ResourceHandler()
        {static} + getInstance()
        + getStrings()
        + getIcons()
    }
  }
  

  FaDE -up-|> FaDEComponentSelectionListener
  FaDE -up-|> JFrame
  FaDE o-- FaDEComponent : left
  FaDE o-- FaDEComponent : right
  FaDE +-down- OSType
  AccessibleJFrame -up-|> AccessibleAWTFrame
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFrame -up-|> AccessibleAWTWindow
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTWindow -up-|> AccessibleAWTContainer
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  WindowDisposerRecord -up-|> DisposerRecord
  AccessibleAWTContainer -up-|> AccessibleAWTComponent
  AccessibleAWTContainer +-down- AccessibleContainerHandler
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  WakingRunnable -up-|> Runnable
  DropTargetEventTargetFilter -up-|> EventTargetFilter
  MouseEventTargetFilter -up-|> EventTargetFilter
  AccessibleAWTComponent -up-|> Serializable
  AccessibleAWTComponent -up-|> AccessibleComponent
  AccessibleAWTComponent -up-|> AccessibleContext
  AccessibleAWTComponent +-down- AccessibleAWTFocusHandler
  AccessibleAWTComponent +-down- AccessibleAWTComponentHandler
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  DummyRequestFocusController -up-|> RequestFocusController
  SingleBufferStrategy -up-|> BufferStrategy
  BltSubRegionBufferStrategy -up-|> SubRegionShowable
  BltSubRegionBufferStrategy -up-|> BltBufferStrategy
  FlipSubRegionBufferStrategy -up-|> SubRegionShowable
  FlipSubRegionBufferStrategy -up-|> FlipBufferStrategy
  BltBufferStrategy -up-|> BufferStrategy
  FlipBufferStrategy -up-|> BufferStrategy
  ProxyCapabilities -up-|> ExtendedBufferCapabilities
  FlipContents -up-|> AttributeValue
  FaDEUncaughtExceptionHandler -up-|> UncaughtExceptionHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
